# trade-training

./: .gitignore  CLAUDE.md  LICENSE  README.md  Specification.md  package-lock.json  package.json  pyproject.toml
.claude/agents/: playwright-tester.md
.serena/: project.yml
apps/trade-analyzer/backend/: pyproject.toml
apps/trade-analyzer/backend/src/trade_analyzer_backend/: __init__.py
apps/trade-analyzer/frontend/: package.json
apps/trade-journal/backend/: pyproject.toml
apps/trade-journal/frontend/: package.json
apps/trade-live/backend/: pyproject.toml
apps/trade-live/backend/src/trade_live_backend/: __init__.py
apps/trade-live/frontend/: package.json
apps/trade-trainer/backend/: pyproject.toml
apps/trade-trainer/backend/src/trade_trainer_backend/: __init__.py  auth.py  config.py  deps.py  main.py
apps/trade-trainer/backend/src/trade_trainer_backend/routers/: __init__.py  _helpers.py  ai_analysis.py  chart.py  drawings.py  events.py  sessions.py  settings.py  stats.py  trades.py  trading_styles.py
apps/trade-trainer/backend/src/trade_trainer_backend/schemas/: __init__.py  ai_analysis.py  chart.py  drawing.py  event.py  post_review.py  session.py  settings.py  stats.py  trade.py  trading_style.py
apps/trade-trainer/backend/src/trade_trainer_backend/services/: ai_client.py  ai_input_builder.py  ai_storage.py  memo_templates.py  post_eval.py  session_models.py  session_store.py  symbols.py  trading_style_store.py
apps/trade-trainer/backend/src/trade_trainer_backend/services/session_store/: __init__.py  io.py  serialize.py
apps/trade-trainer/backend/src/trade_trainer_backend/utils/: __init__.py  datetime.py  http.py  json_io.py
apps/trade-trainer/backend/tests/: test_chart_helpers.py
apps/trade-trainer/frontend/: package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
apps/trade-trainer/frontend/src/: App.tsx  constants.ts  index.css
apps/trade-trainer/frontend/src/api/: client.ts  (+1 more)
config/: spreads.toml  symbols.toml
data/memo-templates/: candidate.md  session-note.md
data/trading-styles/: mid.md  news.md  short.md  swing.md
docs/: ARCHITECTURE.md  CHANGELOG.md  Setup.md  WORKFLOW.md
docs/architecture/: backend.md  drawing-tools.md  frontend-chart.md  frontend-overview.md  invariants.md
docs/plans/: counter-view-feature.md  playwright-testing-improvements.md
docs/plans/done/: playwright-testing-improvements.md
docs/spec/: 01-architecture.md  01-overview.md  02-data-foundation.md  02-trainer.md  03-analysis.md  03-trading-conditions.md  04-live.md  04-session-flow.md  05-chart.md  05-tech-stack.md  06-data-model.md  06-session-screen.md  07-memo.md  08-trading-style.md  09-post-review.md  11-ai-analysis.md  12-live.md  13-data-storage.md  14-ui-layout.md  15-tech-stack.md  16-release-plan.md  17-data-model.md  18-dev-priority.md  README.md
docs/spec/principles/: no-aggregation.md  no-future-info.md  no-tags.md
libs/common-ui-lib/: package.json
scripts/: dev.ps1  release.ps1  verify_all_ranges.py
tools/mql5/: EconomicCalendarExport.mq5  README.md
(+98 files in other folders)
