[project]
name = "trade-analyzer-backend"
version = "0.0.0"
description = "trade-analyzer バックエンド(集計・AI分析)"
requires-python = ">=3.13"
dependencies = [
    "shared-schema",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pandas>=2.2",
    "anthropic>=0.40",
]

[tool.uv.sources]
shared-schema = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trade_analyzer_backend"]
