[project]
name = "trade-analyzer-backend"
version = "0.0.0"
description = "trade-analyzer バックエンド(未採用 placeholder、spec §15.5)"
requires-python = ">=3.13"
dependencies = [
    "shared-schema",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pandas>=2.2",
]

[tool.uv.sources]
shared-schema = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trade_analyzer_backend"]
