[project]
name = "trade-live-backend"
version = "0.0.0"
description = "trade-live バックエンド(FastAPI + MT5 発注)"
requires-python = ">=3.13"
dependencies = [
    "shared-schema",
    "market-data",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "MetaTrader5>=5.0 ; sys_platform == 'win32'",
]

[tool.uv.sources]
shared-schema = { workspace = true }
market-data = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trade_live_backend"]
